err/tchannel.err
Listing '.'...
Listing './bin'...
Compiling './bin/tcurl.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/contextlib2-0.5.5.dist-info'...
Listing './lib/python3.5/site-packages/crcmod'...
Listing './lib/python3.5/site-packages/crcmod-1.7.egg-info'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/ping_client_thrift.py'...
***   File "./lib/python3.5/site-packages/examples/ping_client_thrift.py", line 13
    print client.ping('world')
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/opentracing'...
Listing './lib/python3.5/site-packages/opentracing/ext'...
Listing './lib/python3.5/site-packages/opentracing/harness'...
Listing './lib/python3.5/site-packages/opentracing-1.2.2.egg-info'...
Listing './lib/python3.5/site-packages/opentracing_instrumentation'...
Listing './lib/python3.5/site-packages/opentracing_instrumentation/client_hooks'...
Listing './lib/python3.5/site-packages/opentracing_instrumentation-2.4.0.egg-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tchannel'...
Listing './lib/python3.5/site-packages/tchannel/container'...
Listing './lib/python3.5/site-packages/tchannel/health'...
Listing './lib/python3.5/site-packages/tchannel/messages'...
Listing './lib/python3.5/site-packages/tchannel/schemes'...
Listing './lib/python3.5/site-packages/tchannel/serializer'...
Listing './lib/python3.5/site-packages/tchannel/sync'...
Compiling './lib/python3.5/site-packages/tchannel/tcurl.py'...
***   File "./lib/python3.5/site-packages/tchannel/tcurl.py", line 265
    print json.dumps(result.body, default=_dictify)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tchannel/testing'...
Listing './lib/python3.5/site-packages/tchannel/testing/vcr'...
Listing './lib/python3.5/site-packages/tchannel/thrift'...
Compiling './lib/python3.5/site-packages/tchannel/thrift/server.py'...
***   File "./lib/python3.5/site-packages/tchannel/thrift/server.py", line 248
    raise exc_info[0], exc_info[1], exc_info[2]
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tchannel/tornado'...
Compiling './lib/python3.5/site-packages/tchannel/tornado/peer.py'...
***   File "./lib/python3.5/site-packages/tchannel/tornado/peer.py", line 500
    raise typ, error, tb
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tchannel/tracing.py'...
***   File "./lib/python3.5/site-packages/tchannel/tracing.py", line 280
    parent_id=carrier['parent_id'] or 0L,
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tchannel/zipkin'...
Listing './lib/python3.5/site-packages/tchannel-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/threadloop'...
Listing './lib/python3.5/site-packages/threadloop-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/thriftrw'...
Listing './lib/python3.5/site-packages/thriftrw/compile'...
Listing './lib/python3.5/site-packages/thriftrw/idl'...
Listing './lib/python3.5/site-packages/thriftrw/protocol'...
Listing './lib/python3.5/site-packages/thriftrw/spec'...
Listing './lib/python3.5/site-packages/thriftrw/wire'...
Listing './lib/python3.5/site-packages/thriftrw-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/wrapt'...
Listing './lib/python3.5/site-packages/wrapt-1.10.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
